--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -12,6 +12,7 @@
   "author": "Hiren Gondhiya",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.13.1",
     "request": "^2.73.0",
     "yargs": "^4.8.1"
   }
